--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,49 +1,6 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
-<head>
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>{{ page.title }} | The Toolbelt</title>
-   <meta name="author" content="Brad Whittington" />
-   <link href="http://toolbelt.co.za/atom.xml" rel="alternate" title="Brad Whittington" type="application/atom+xml" />
-
-   <!-- syntax highlighting CSS -->
-   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
-
-   <!-- Homepage CSS -->
-   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
-
-</head>
-<body>
-
-<div class="site">
-  <div class="title">
-    <a href="/">Brad Whittington</a>
-    <a class="extra" href="/">home</a>
-  </div>
-  
-  {{ content }}
-  
-  <div class="footer">
-    <div class="contact">
-      <p>
-        Brad Whittington<br />
-        Cofounder of <a href="http://lessfuss.co.za/">Lessfuss</a><br />
-        brad@whijo.net
-      </p>
-    </div>
-    <div class="contact">
-      <p>
-        <a href="http://github.com/bradwhittington/">github.com/bradwhittington</a><br />
-        <a href="http://twitter.com/darb/">twitter.com/darb</a><br />
-      </p>
-    </div>
-    <div class="rss">
-      <a href="http://toolbelt.co.za/atom.xml">
-        <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
-      </a>
-    </div>
-  </div>
-</div>
-
-</body>
-</html>
+---
+theme :
+  name : twitter
+---
+{% include JB/setup %}
+{% include themes/twitter/default.html %}
